Fix: Prevent credential leak in AuditLogManager
Refactors AuditLogManager to use ProcessBuilder instead of Runtime.getRuntime().exec() when executing mysqldump.
Injects the database password securely via the MYSQL_PWD environment variable instead of appending it as a command-line argument.
Separates argument flags from their values to address false-positive command injection static analysis alerts.
Uses a StringBuilder to safely assemble dynamic query strings.

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>